[gd_scene load_steps=4 format=3 uid="uid://cdyyl3e057k3d"]

[ext_resource type="Script" path="res://game_over.gd" id="1_82v36"]
[ext_resource type="Texture2D" uid="uid://dmep6r1rdhfft" path="res://Art/ending.png" id="2_okj1e"]

[sub_resource type="LabelSettings" id="LabelSettings_wryru"]
font_size = 28

[node name="GameOver" type="Node2D"]
script = ExtResource("1_82v36")

[node name="Ending" type="Sprite2D" parent="."]
position = Vector2(585.292, 337.5)
scale = Vector2(0.238716, 0.238716)
texture = ExtResource("2_okj1e")

[node name="FinalScore" type="Label" parent="."]
offset_left = 572.0
offset_top = 153.0
offset_right = 1340.0
offset_bottom = 192.0
text = "Puntuación final: 1000000"
label_settings = SubResource("LabelSettings_wryru")
horizontal_alignment = 1

[node name="RetryButton" type="Button" parent="."]
offset_left = 880.0
offset_top = 233.0
offset_right = 1044.0
offset_bottom = 322.0
text = "Reintentar"

[node name="MainMenuButton" type="Button" parent="."]
offset_left = 880.0
offset_top = 365.0
offset_right = 1044.0
offset_bottom = 437.0
text = "Volver al 
menú principal"

[connection signal="pressed" from="RetryButton" to="." method="_on_retry_button_pressed"]
[connection signal="pressed" from="MainMenuButton" to="." method="_on_main_menu_button_pressed"]
